--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,9 @@ android {
 }
 
 dependencies {
-    implementation libs.appcompat
+    def room_version = "2.8.4"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
